fizzbuzz-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fizzbuzz-15
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /get?response=fizzbuzz
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: "/([0369]|[147][0369]*([147][0369]*[258][0369]*)*([147][0369]*[147]|[258])|[258][0369]*([258][0369]*[147][0369]*)*([258][0369]*[258]|[147]))*(0|[147][0369]*([147][0369]*[258][0369]*)*5|[258][0369]*([258][0369]*[147][0369]*)*[258][0369]*5)$"
        backend:
          serviceName: httpbin
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fizzbuzz-5
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /get?response=buzz
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: "/.*[05]$"
        backend:
          serviceName: httpbin
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fizzbuzz-3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /get?response=fizz
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: "/([0369]|[147][0369]*[258]|(([258]|[147][0369]*[147])([0369]|[258][0369]*[147])*([147]|[258][0369]*[258])))+$"
        backend:
          serviceName: httpbin
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fizzbuzz-none
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /get?response=$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: "/(.+)$"
        backend:
          serviceName: httpbin
          servicePort: 80
